--- a/requirements.txt
+++ b/requirements.txt
@@ -15,7 +15,7 @@ gunicorn==19.8.1
 idna==2.7
 isort==4.3.4
 itsdangerous==0.24
-Jinja2>=2.10.1
+Jinja2==2.10.1
 lazy-object-proxy==1.3.1
 MarkupSafe==1.0
 mccabe==0.6.1
@@ -24,7 +24,7 @@ psycopg2==2.7.4
 pycparser==2.18
 pylint==1.9.1
 six==1.11.0
-SQLAlchemy==1.2.7
+SQLAlchemy==1.3.0
 Werkzeug==0.14.1
 wrapt==1.10.11
 WTForms==2.1
